# Raw2Value

./: .gitignore  CLAUDE.md  HACKATHON_KURALLARI.md  Kapadokya Hackathon 2026 — Team Feza Rakip İstihbarat Raporu.md  Modul_A_Critical_Path_Dependency.md  Modul_A_Critical_Path_Dependency_v2.md  P3Tuna.ipynb  README.md  commit-discipline.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  rasterio-1.3.8-cp311-cp311-win_amd64.whl  requirements.txt
QA/: QA_REPORT_v1.md  _test_manifest_contract.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_ml.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_analysis_history.py  0003_uploaded_files.py
backend/app/: __init__.py  config.py  deps.py  exceptions.py  logging.py  main.py
backend/app/api/: analyze.py  auth.py  evidence.py  files.py  fx.py  health.py  history.py  organizations.py  processors.py  route.py  whatif.py
backend/app/clients/: __init__.py  ors.py  tcmb.py
backend/app/core/: __init__.py  cache.py  middleware.py  rate_limit.py  security.py  security_headers.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  analysis.py  organization.py  profiles.py  uploaded_file.py  user.py
backend/app/schemas/: __init__.py  analyze.py  auth.py  file_upload.py  fx.py  history.py  organization.py  processor.py
backend/app/services/: __init__.py  auth_service.py  evidence_service.py  file_service.py  fx_service.py  geo_service.py  history_service.py  match_enrichment.py  ml_service.py  org_service.py
backend/scripts/: healthcheck.py  qa_smoke.sh  seed_demo.py  wait_for_db.py
backend/tests/: conftest.py  test_analyze.py  test_auth.py  test_evidence.py  test_files.py  test_fx.py  test_health.py  test_history.py  test_orgs.py  test_ors_client.py  test_processors.py  test_rate_limit.py  test_whatif.py
backend/tests/fixtures/: tcmb_response.json
(+322 files in other folders)
